# ai-playground

./: .gitignore  README.md  complete_finetuning_guide.md
experimental-notebooks/: README.md  Triton-Puzzles.ipynb
experimental-notebooks/fine-tuning/: 02. llm_finetuning_hf.ipynb  pyproject.toml
experimental-notebooks/maths-for-dl/: maths-for-dl.ipynb  pyproject.toml
experimental-notebooks/rags/infinite-retreival/: README.md  main.py  pyproject.toml
experimental-notebooks/rags/infinite-retreival/notebooks/: infini_retri_demo.ipynb  infini_retri_paper_analysis.ipynb
experimental-notebooks/rags/infinite-retreival/src/: harder_demo.py  infini_retri.py  quick_demo.py
experimental-notebooks/reinforcement-learning/initial-research/: GRPO-fine-tuning.ipynb  GRPO_Example.ipynb  reinforcement_learning_policy_search.ipynb
