[project]
name = "infinite-retrieval"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]
